--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_BASE_URL = http://localhost:8787
+VITE_BASE_API_URL = https://atm-visualizer-server.kienthuc4701.workers.dev
+VITE_BASE_FRONTEND_URL = http://localhost:5137
+VITE_ATM_TOKEN = atm-token
