--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# VITE_BASE_API_URL=https://atm-visualizer-server.kienthuc4701.workers.dev
-VITE_BASE_API_URL=http://127.0.0.1:8787
+VITE_BASE_API_URL=https://atm-visualizer-server.kienthuc4701.workers.dev/api
+# VITE_BASE_API_URL=http://127.0.0.1:8787/api
 VITE_BASE_FRONTEND_URL=http://localhost:5137
 VITE_ATM_TOKEN=atm-token
